--- a/src/layouts/Header/Header.css
+++ b/src/layouts/Header/Header.css
@@ -1,51 +1,142 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  margin: 40px 100px; 
+  width: 1240px;
+}
+
+.nav_main {
+  margin-top: 17px;
+  margin-bottom: 17px;
+}
+
+.nav_link {
+  font-size: 24px;
+  font-weight: 500;
+  color: #FF6060;
+  text-decoration: none;
+}
+
+.nav_home {
+  margin-right: 57px;
+}
+
+/* @import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap);
+body {
+  margin: auto;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+h1,
+h2,
+p,
+ul {
+  margin: 0;
+}
+
+ul {
+  -webkit-padding-start: 0px;
+          padding-inline-start: 0px;
+  list-style-type: none;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.link:hover {
+  text-decoration: underline;
+}
+
+:root {
+  --main-color: #ff6060;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px auto;
+  width: 335px;
+}
+
+.nav__main {
+  align-items: center;
+  display: flex;
+  height: 43px;
+  justify-content: space-between;
+}
+
+.nav__link--home {
+  margin-right: 10px;
+}
+
+.nav__link {
+  color: #ff6060;
+  color: var(--main-color);
+  font-style: normal;
+  font-weight: 500;
+}
+
+.nav__logo {
+  height: 43px;
+}
+
+@media screen and (min-width: 768px) {
+  .nav {
+    width: 728px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .nav {
+    margin: 40px auto 60px;
+    width: 1240px;
+  }
+
+  .nav__link {
+    font-size: 1.5rem;
+  }
+
+  .nav__link--home {
+    margin-right: 50px;
+  }
+
+  .nav__main,
+  .nav__logo {
+    height: 68px;
+  }
+}
+
+/* * {
+    margin: 0;
+    padding: 0;
+}
+
 .nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 2%;
-    padding-top: 20px;
-}
-
-@media (min-width: 375px) {
-    .nav { 
-        margin: 2% 2%;
-    }
+    padding: 3rem 0;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
 }
 
 .nav_main {
-    display: flex;
-    width: 33%;
-    justify-content: space-around;
-}
-
-@media (min-width: 375px) {
-    .nav_main { 
-        width: 60% ;
-    }
-}
-
-.nav_link {
-    color:#FF6060;
-    display: flex;
     align-items: center;
-    justify-content: flex-end;
-    font-weight: 500;
-    text-decoration: underline;
-    width: 50%;
-}
-
-@media (min-width: 375px) {
-    .nav_link { 
-        font-size: small;
-    }
-}
-  
-.nav_logo {
-      height: 47px;
-}
-
-@media (min-width: 375px) {
-    .nav_logo {
-        height: 53px;
-    }
-}
+    height: 43px;
+} */
