--- a/src/layouts/Header/Header.css
+++ b/src/layouts/Header/Header.css
@@ -8,210 +8,72 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	margin: 40px 100px 63px 100px;
   max-width: 1240px;
   height: 68px;
 }
 
-.nav_logo {
-  width: 210.32px;
-  height: 68px;
-	}
-
-.nav_main, .nav_link {
+.nav .nav_main a {
 	color:  #ff6060;
-	font-size: 24px;
-	text-decoration: none;
+  text-decoration: none;
+  white-space: nowrap;
+  text-transform: uppercase;
   font-weight: 500;
+  /* margin-left: 57px; */
 }
 
-.nav_link {
-	text-decoration: underline;
-}
-
-
-.nav_home {
-  margin-right: 57px;
+.nav .nav_main .active {
+  text-decoration: underline;
 }
 
 @media screen and (max-width: 375px) {
   .nav {
-    max-width: 335px;
-    height: 47px;
+    /* max-width: 335px;
+    height: 47px; */
     margin: 20px 20px 16px 20px;
   }
-  
   .nav_logo {
-		width: 145px;
+    width: 145px;
     height: 47px;
-	}
-
-  .nav_link {
+  }
+  .nav_main a {
     font-size: 12px;
-    text-transform: uppercase;
-    margin-right: 20px;
+    margin-left: 10px;
   }
-  .nav_home {
-    margin-right: 10px;
-  }
-}
+}  
 
-@media screen and (min-width: 768px) {
-	/* .nav {
-		max-width: 1240px;
-  } */
-
-	.nav_main {
-				text-transform: capitalize;
-				font-size: 16px;
-			}
-		}
-	
-
-/* * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  margin: 40px 100px; 
-  width: 1240px;
-}
-
-.nav_main {
-  margin-top: 17px;
-  margin-bottom: 17px;
-}
-
-.nav_link {
-  font-size: 24px;
-  font-weight: 500;
-  color: #FF6060;
-  text-decoration: none;
-}
-
-.nav_home {
-  margin-right: 57px;
-} */
-
-
-
-
-
-
-/* @import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap);
-body {
-  margin: auto;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-}
-
-h1,
-h2,
-p,
-ul {
-  margin: 0;
-}
-
-ul {
-  -webkit-padding-start: 0px;
-          padding-inline-start: 0px;
-  list-style-type: none;
-}
-
-.link {
-  text-decoration: none;
-}
-
-.link:hover {
-  text-decoration: underline;
-}
-
-:root {
-  --main-color: #ff6060;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  margin: 20px auto;
-  width: 335px;
-}
-
-.nav__main {
-  align-items: center;
-  display: flex;
-  height: 43px;
-  justify-content: space-between;
-}
-
-.nav__link--home {
-  margin-right: 10px;
-}
-
-.nav__link {
-  color: #ff6060;
-  color: var(--main-color);
-  font-style: normal;
-  font-weight: 500;
-}
-
-.nav__logo {
-  height: 43px;
-}
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 376px) {
   .nav {
-    width: 728px;
+    margin: 30px 50px 50px 30px;
+  }
+  .nav_logo {
+    max-width: 160px;
+    max-height: 55px;
+  }
+  .nav_main a {
+    font-size: 16px;
+    margin-left: 16px;
   }
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 769px) {
   .nav {
-    margin: 40px auto 60px;
-    width: 1240px;
+    margin: 35px 100px 50px 100px;
   }
-
-  .nav__link {
-    font-size: 1.5rem;
+  .nav_logo {
+    max-width: 185px;
+    max-height: 60px;
   }
-
-  .nav__link--home {
-    margin-right: 50px;
-  }
-
-  .nav__main,
-  .nav__logo {
-    height: 68px;
+  .nav_main a {
+    font-size: 20px;
+    margin-left: 30px;
   }
 }
 
-/* * {
-    margin: 0;
-    padding: 0;
+@media screen and (min-width: 993px) {
+  .nav {
+    margin: 40px 100px 63px 100px;
+  }
+  .nav_main a {
+    margin-left: 57px;
+  }
 }
-
-.nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 3rem 0;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-align-items: center;
-    align-items: center;
-}
-
-.nav_main {
-    align-items: center;
-    height: 43px;
-} */
