--- a/src/layouts/Footer/Footer.css
+++ b/src/layouts/Footer/Footer.css
@@ -4,9 +4,14 @@
     padding: 0;
 }
 
+/* .footer-container {
+    width: auto;
+} */
+
+
 .footer-container {
     bottom: 0;
-    width: 1440px;
+    /* width: 1440px; */
     background: black;
     height: 209px;
     display: flex;
@@ -22,16 +27,16 @@
 
 .text-footer {
     color: #fff;
-    font-size: 27px;
     font-weight: 500;
     margin-top: 33px
 }
 
 
-@media screen and (max-width: 375px) {
+
+@media screen and (max-width: 376px) {
     .text-footer {
-    font-size: 12px;
-    margin-top: 34px;
+        font-size: 12px;
+        margin-bottom: 31px;
     }
     .footer-container {
         width: 375px;
@@ -42,17 +47,26 @@
     }
 }
 
-@media screen and (min-width: 376px) {
+@media screen and (min-width: 768px) {
     .text-footer {
-
+        font-size: 16px;
     }
-    .footer-container {
+}
 
+@media screen and (min-width: 992px) {
+    .text-footer {
+        font-size: 18px;
     }
 }
 
 
-@media screen and (max-width: 1440px) {
+@media screen and (min-width: 1200px) {
+    .text-footer {
+        font-size: 24px;
+    }
+}
+
+/* @media screen and (max-width: 1440px) {
     .footer-container {
         width: auto;
     }
@@ -60,4 +74,4 @@
         font-size: 24px;
         margin-top: 32px;
     }
-}
+} */
