--- a/src/components/Carrousel/Carrousel.css
+++ b/src/components/Carrousel/Carrousel.css
@@ -1,12 +1,12 @@
 
 .container {
-	margin: 0;
+	margin: 0 auto;
+	height: 415px;
+	width: 1240px;
 	position: relative;
 }
 .carrousel {
-	height: 100%;
 	position: relative;
-	width: 100%;
 }
 .carrousel_navigation {
 	display: flex;
@@ -22,15 +22,16 @@
     object-fit: cover;
     user-select: none;
     width: 100%;
-	border-radius: 10px;
-	}
+	border-radius: 25px;
+}
 .carrousel_legend {
     color: white;
     left: 0;
     position: absolute;
     right: 0;
     text-align: center;
-	bottom: 10px;
+	bottom: 24.92px;
+	font-size: 18px;
 }
 
 .hide-img {
@@ -38,13 +39,36 @@
 }
 
 .chevron {
-	cursor: pointer;
-	height: 20px;
+    cursor: pointer;
+    height: 79.2px;
+    width: 46.68px;
+	margin: 0 23.36px 0;
+}
+
+@media screen and (max-width: 376px) {
+	.container {
+		width: 335px;
+		height: 255px;
+	}
+	.chevron {
+		width: 11.67px;
+		height: 19.8px;
+		margin: 0 5.84px 0
+	}
+	.carrousel {
+		width: 335px;
+	}
+	
+	.carrousel_legend {
+		display: none;
+	}
+	.carrousel_img {
+		border-radius: 10px;
+	}
 }
 
 @media screen and (min-width: 992px){
-	.carrousel__img {
-		height: 450px;
+	.carrousel_img {
+		height: 415px;
 	}
-	
 }
