--- a/src/components/RentalCard/RentalCard.css
+++ b/src/components/RentalCard/RentalCard.css
@@ -7,12 +7,13 @@
 	overflow: hidden;
 }
 .rentalcard_title {
-	bottom: 25px;
-	font-size: 18px;
-	font-weight: 500;
-	left: 19.71px;
-	position: absolute;
-	color: white;
+	bottom: 20px;
+    font-size: 18px;
+    font-weight: 500;
+    left: 20px;
+    position: absolute;
+    color: white;
+    width: 300px;
 }
 .rentalcard_img {
 	height: 100%;
@@ -29,6 +30,11 @@
 	.rentalcard {
 		width: 335px;
 		height: 255px;
+	}
+	.rentalcard_title {
+		bottom: 15px;
+		left: 19.71px;
+		right: 19.71px;
 	}
 }
 
