--- a/src/components/RentalHeader/RentalHost/RentalHost.css
+++ b/src/components/RentalHeader/RentalHost/RentalHost.css
@@ -1,4 +1,3 @@
-
 .host {
 	display: flex;
 	align-items: center;
@@ -15,8 +14,8 @@
     font-weight: 500;
     text-align: right;
 	color: #ff6060;
+	width: min-content;
 }
-
 
 @media screen and (min-width: 768px) {
 	.host {
@@ -28,6 +27,7 @@
 	}
     .host_name {
 		font-size: 18px;
+		width: 93px;
 	}
 }
 	
