--- a/src/components/RentalHeader/RentalRatings/RentalRatings.css
+++ b/src/components/RentalHeader/RentalRatings/RentalRatings.css
@@ -4,18 +4,18 @@
 }
     
 .stars {
-    width: 450px;
+    margin-top: 14px;
 }
 
 @media screen and (min-width: 768px) {
     .stars {
-        margin-top: 10px;
-        width: 190px;
+        width: 196px;
+        height: 36px;
     }
      
     .star {
-        height: 32px;
-        margin: 0 3px;
-        width: 32px;
+        height: 30px;
+        margin: 0 7px 0 0;
+        width: 30px;
     }
 }
