--- a/src/components/Collapse/collapse.css
+++ b/src/components/Collapse/collapse.css
@@ -8,9 +8,9 @@
 	align-items: center;
 	color: white;
 	background: #ff6060;
-	/* height: 29.93px; */
+	z-index: 100;
+    position: relative;
 	cursor: pointer;
-	/* border-radius: 5px; */
 	padding: 0px 11.8px 0 20px;
 }
 
@@ -33,8 +33,9 @@
 	background: #f7f7f7;
     height: auto;
     opacity: 0;
-	border-radius: 0 0 10px 10px;
     transition: opacity 200ms ease-in;
+	transform: translateY(-10px);
+	border-radius: 10px;
 }
 
 .collapse_content {
@@ -56,7 +57,7 @@
 .collapse_toggle_content > p {
 	padding: 30px 12px 53px 20px;
     background-color: #f6f6f6;
-    border-radius: 0 0 10px 10px;
+    border-radius: 10px;
 }
 
 .collapse_toggle_content > ul {
@@ -71,17 +72,29 @@
 		margin-top: 20.07px;
 	}
     .collapse_visible {
-        width: 335px;
 		height: 29.83px;
 		border-radius: 5px;
     }
 	.collapse_toggle_content > ul {
-		padding: 17.27px 0 1.3px 11.51px;
+		padding: 23.02px 6.91px 1.3px 11.51px;
+		line-height: 17.11px;
 	}
 	.collapse_toggle_content > p {
-		padding: 17.27px 0 1.3px 11.51px;
+		padding: 23.02px 6.91px 1.3px 11.51px;
+		line-height: 17.11px;
 	}
 }
+
+@media screen and (min-width: 377px) {
+	.collapse_visible {
+    	border-radius: 10px;
+    	height: 35px;
+	}
+	.collapse {
+    	margin-top: 20.07px;
+	}
+}
+
 @media screen and (min-width: 768px) {
     .collapse_visible {
         border-radius: 10px;
