--- a/src/components/RentalHeader/RentalTitle/RentalTitle.css
+++ b/src/components/RentalHeader/RentalTitle/RentalTitle.css
@@ -14,6 +14,14 @@
     font-weight: 500;
 }
 
+@media screen and (min-width: 377px) {
+	.title {
+		font-size: 24px;
+		line-height: 51.34px;
+		max-width: 100%;
+	}
+}
+
 @media screen and (min-width: 768px) {
 	.title {
 		font-size: 36px;
