--- a/src/pages/Rental/Rental.css
+++ b/src/pages/Rental/Rental.css
@@ -1,3 +1,4 @@
+
 .rental_informations {
   display: flex;
   flex-direction: column;
@@ -16,7 +17,7 @@
  @media screen and (max-width: 376px) {
     .rental {
         margin: 0 20px;
-        min-height: 100vh;
+        min-height: 95vh;
     }
     .rental_wrapper {
         margin-top: -20px;
@@ -30,10 +31,20 @@
     }
  }
 
+ @media screen and (min-width: 376px) {
+    .rental {
+        margin: 0 20px;
+        min-height: 95vh;
+    }
+    .rental_host {
+        justify-content: space-between;
+    }
+ }
+
 @media screen and (min-width: 768px) {
     .rental {
         max-width: 1240px;
-        margin:auto;
+        margin: 0px 30px 0px 30px;;
         transform: translateY(-46px);
     }
     .rental_host {
@@ -51,4 +62,18 @@
         
     }
 }
+
+@media screen and (min-width: 992px) {
+    .rental {
+        margin: 0px 50px 0px 50px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .rental {
+        margin: 0 100px 0 100px;
+    }
+}
+
+
 
