--- a/src/pages/A-propos/Apropos.css
+++ b/src/pages/A-propos/Apropos.css
@@ -1,22 +1,23 @@
 .apropos {
-    margin: 10px;
 	min-height: 90vh;
 }
 
-.apropos_values {
-	display: grid;
-	gap: 20px;
-	margin-top: 20px;
+@media screen and (max-width: 376px) {
+    .apropos {
+        margin: 0 20px 0 20px;
+    }
 }
+
+
+    .apropos_values {
+        margin: 0 20px 0 20px;
+    }
 
 @media screen and (min-width: 768px) {
     .apropos {
-        padding: 10px;
-		max-width: 1080px;
 		margin: auto;
     }	
     .apropos_values {
-		max-width: 900px;
-        margin: 30px auto;
+        transform: translateY(-14px);
     }
 }
