--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -33,6 +33,8 @@
 	.banner_title {
         font-size: 24px;
 		margin-left: 16px;
+		width: 201px;
+		height: 48px;
     }
 	.banner_about {
 		width: 336px;
