--- a/src/components/Collapse/collapse.css
+++ b/src/components/Collapse/collapse.css
@@ -14,11 +14,8 @@
 	padding: 0px 11.8px 0 20px;
 }
 
-.collapse_title {
-    font-size: 13px;
+.collapse_visible_title {
 	font-weight: 500;
-	margin: 0;
-	padding: 0;
 }
 
 .collapse_chevron {
@@ -75,7 +72,7 @@
 }
 
 .apropos .collapse_toggle {
-	width: 1023px;
+	max-width: 1023px;
 	height: 146px;
 	margin: 0 auto;
 }
@@ -92,6 +89,9 @@
 		height: 29.83px;
 		border-radius: 10px;
     }
+	.collapse_visible_title {
+		font-size: 13px;
+	}
 	.collapse_toggle_content > ul {
 		padding: 23.02px 6.91px 1.3px 11.51px;
 		line-height: 17.11px;
@@ -99,11 +99,23 @@
 	.collapse_toggle_content > p {
 		padding: 23.02px 6.91px 1.3px 11.51px;
 		line-height: 17.11px;
-		width: 335px;
-		height: 143.32px;
+	}
+	.apropos .collapse_toggle_content > p {
+		padding: 23.08px 6.91px 11.51px;
 	}
 	.apropos .collapse {
 		transform: translateY(-1.07px);
+	}
+	.apropos .collapse_visible {
+		height: 30px;
+	}
+	.apropos .collapse_visible h2 {
+		font-size: 13px;
+	}
+	.apropos .collapse_visible img,
+	.collapse_visible img {
+		height: 8.98px;
+		width: 15.2px;	
 	}
 	.apropos .collapse_toggle {
 		width: 335px;
@@ -131,7 +143,7 @@
 		height: 52px;
 		margin: 0 auto;
     }
-    .collapse_title {
+    .collapse_visible_title {
         font-size: 18px;
 	}
 	.collapse_chevron {
@@ -142,12 +154,14 @@
 	    line-height: 25.67px;
 	    text-align: justify;
     }
+	.apropos .collapse_visible_title {
+		font-size: 24px;
+	}
 }
 
-
-    .apropos .collapse_visible {
-        border-radius: 5px;
-		height: 47px;
-		max-width: 1023px;
-		margin: 0 auto;
-    }
+.apropos .collapse_visible {
+    border-radius: 5px;
+	max-height: 47px;
+	max-width: 1023px;
+	margin: 0 auto;
+}
